cambios en el formulario

--- a/pagina-interna.html
+++ b/pagina-interna.html
@@ -80,22 +80,23 @@
                         <ul>
                             <li class="dropdown"><a href="#"><span>Faciales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                                 <ul>
-                                   <li><a href="#peeling">Peeling</a></li>
-                                   <li><a href="#dermapen">Dermapen</a></li>
-                                   <li><a href="#microneedling">Microneedling</a></li>
-                                   <li><a href="#mesolifting">Mesolifting</a></li>
-                                   <li><a href="#exfoliacion">Exfoliacion</a></li>
-                                   <li><a href="#botox">Botox</a></li>
+                                  <li><a href="tratamiento-dermapen.html">Dermapen</a></li>
+                                  <li><a href="#microneedling">Microneedling</a></li>
+                                  <li><a href="tratamiento-mesolifting.html">Mesolifting</a></li>
+                                  <li><a href="tratamiento-limpieza-facial.html">Limpieza Facial</a></li>
+                                  <li><a href="tratamiento-botox.html">Botóx</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown"><a href="#"><span>Corporales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                                 <ul>
-                                    <li><a href="#criolipolisis">Criolipolisis</a></li>
-                                    <li><a href="#himfu">Himfu</a></li>
-                                    <li><a href="#lifting">Liftin de Gluteo</a></li>
-                                    <li><a href="#depilaser">Depilaser</a></li>
-                                    <li><a href="#mesoterapia">Mesoterapia</a></li>
-                                    <li><a href="#velashape">Velashape</a></li> 
+                                  <li><a href="tratamiento-criolipolisis.html">Criolipolisis</a></li>
+                                  <li><a href="tratamiento-himfu.html">Himfu</a></li>
+                                  <li><a href="tratamiento-endopeel.html">Endopeel</a></li>
+                                  <li><a href="tratamiento-depilaser.html">Depilaser</a></li>
+                                  <li><a href="tratamiento-mesoterapia.html">Mesoterapia</a></li>
+                                  <li><a href="tratamiento-velashape.htm">Velashape</a></li> 
+                                  <li><a href="tratamiento-radiofrecuencia.html">Radiofrecuencia Corporal</a></li> 
+                                  <li><a href="tratamiento-mio-up.html">Mio-Up</a></li> 
                                 </ul>
                             </li>
                         </ul>
@@ -126,24 +127,24 @@
 
         <div class="container">
 
-            <div class="d-flex justify-content-between align-items-center">
-              <h2>Descripción Del Tratamiento</h2>
-              <ol>
-                <li><a href="index.html">Home</a></li>
-                <li>Detalles</li>
-              </ol>
-            </div>
+
         </div>
        
     </section>
 
     <!-- Termina Barra de descripcion -->
 
-    <section class="inner-page">
+    <section class="pagina-interna">
         <div class="container">
-          <p>
-            Example inner page template
-          </p>
+          <div class="row">
+            <div class="mensaje col-lg-12 d-flex justify-content-center align-items-center">
+              <p>Muchas Gracias! por tú Mensaje. <br> 
+                ha sido enviado de forma satisfactoria, nos entaremos contactando a la brevedad</p>
+
+            </div>
+
+          </div>
+
         </div>
       </section>
 
@@ -236,6 +237,12 @@
 <!-- Templay main archivo JS-->
 <script src="assets/js/main.js"></script>
 
-
+<!-- Redirect -->
+<script>
+  setTimeout(function() => {
+    window.location.replace("https://maribeautyclinic.000webhostapp.com/");
+    
+  }, 3000);
+</script>
 
 <body>
