pagina de formulario

--- a/pagina-interna.html
+++ b/pagina-interna.html
@@ -239,7 +239,7 @@
 
 <!-- Redirect -->
 <script>
-  setTimeout(function() => {
+  setTimeout(function(){
     window.location.replace("https://maribeautyclinic.000webhostapp.com/");
     
   }, 3000);
