--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
     
     <!-- CSS vendor Bootstrap y otros -->
     <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/vendor/glightbox/css/glightbox.min.css">
    
     
@@ -234,7 +233,7 @@
             <p>Reducir arrugas y líneas de expresión </p>
             <div class="portfolio-links">
               <a href="/assets/img/botox/botox-terapia.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-botox.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -248,7 +247,7 @@
             <p>Eliminar vello en distintas zonas</p>
             <div class="portfolio-links">
               <a href="/assets/img/Depilaser/depilacion-lase-definitiva.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-depilaser.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -262,7 +261,7 @@
             <p>Mejorar aspecto y textura de la piel</p>
             <div class="portfolio-links">
               <a href="/assets/img/dermapen/metodo-facial-dermapen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-dermapen.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -276,7 +275,7 @@
             <p>Eliminar tejido graso subcutáneo</p>
             <div class="portfolio-links">
               <a href="/assets/img/Himfu/himfu.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-himfu.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -290,7 +289,7 @@
             <p>Tratamiento para realzar el glúteo</p>
             <div class="portfolio-links">
               <a href="/assets/img/endopeel/Aumento-de-gluteos-con-acido-hialuronico-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-endopeel.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -304,7 +303,7 @@
             <p>Limpieza y tratamiento rejuvenecedor </p>
             <div class="portfolio-links">
               <a href="/assets/img/limpieza-facial/limpieza-facial.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-limpieza-facial.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -318,7 +317,7 @@
             <p>Rejuvenecimiento de la piel y atenuación de las arrugas</p>
             <div class="portfolio-links">
               <a href="/assets/img/mesolifting/mesolifting-cuello.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-mesolifting.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -332,7 +331,7 @@
             <p>Reducir celulitis y tejido adiposo</p>
             <div class="portfolio-links">
               <a href="/assets/img/mesoterpia/mesoterapia-abdomen-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-mesoterapia.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -346,7 +345,7 @@
             <p>Reducir el contorno corporal y la celulitis</p>
             <div class="portfolio-links">
               <a href="/assets/img/velashape/Velashape-mari-beauty-clinic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-velashape.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -360,7 +359,7 @@
             <p>Combatir la flacidez y la celulitis</p>
             <div class="portfolio-links">
               <a href="/assets/img/radiofrecuencia/radiofrecuencia-abdomen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-radiofrecuencia.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -374,7 +373,7 @@
             <p>Reducir grasa adiposa y tonificar</p>
             <div class="portfolio-links">
               <a href="/assets/img/mio-up/mio-up-gluteos.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-mio-up.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -411,7 +410,7 @@
                   <li class="list-group-item">(4) Sesiones de Ondas de Choque</li>
                   <li class="list-group-item">(2) Sesiones de Drenaje</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="https://wa.me/5491173657690/?text=Hola%20estoy%20interesada%20en%20saber%20mas%20del%20Plan%20Reductores" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -427,7 +426,7 @@
                   <li class="list-group-item">(2) Sesiones de Ondas de Choque</li>
                   <li class="list-group-item">(2) Meso Anticelulitis</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%20Reductores%20Anticelulitis" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -441,7 +440,7 @@
                   <li class="list-group-item">(4) Sesiones de Mio-Up</li>
                   <li class="list-group-item">(2) Sesiones de Meso Anti-Flacidez</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%Tonificador" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -458,7 +457,7 @@
                   <li class="list-group-item">(1) Altafrecuencia Facial</li>
                   <li class="list-group-item">(1) Mascarilla con Acido Hialuronico</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%20Limpieza%20Facial" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -472,7 +471,7 @@
                   <li class="list-group-item">(1) RadioFrecuencia Facial</li>
                   <li class="list-group-item">(1) Meso con Vitamina C</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%20Facial%20Mesoterapia" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -486,7 +485,7 @@
                   <li class="list-group-item">(1) Plasma Rico en Plaquetas</li>
                   <li class="list-group-item">(1) RadioFrecuencia Facial</li>
                 </ul>
-                <a href="#" class="btn btn-primary">Reservar</a>
+                <a href="https://wa.me/5491173657690/?text=Hola!%20me%20intereza%20saber%20mas%20del%20Plan%20Facial%Plasma" class="btn btn-primary" target="_blank">Reservar</a>
               </div>
             </div>
           </div>
@@ -619,11 +618,11 @@
           <div class="form-group mt-3">
             <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
           </div>
-          <div class="my-3">
+          <!-- <div class="my-3">
             <div class="loading">Loading</div>
             <div class="error-message"></div>
             <div class="sent-message">Tu mensaje ha sido enviado, Gracias!</div>
-          </div>
+          </div> -->
           <div class="text-center"><button type="submit">Enviar mensaje</button></div>
         </form>
 
@@ -718,7 +717,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 <!-- Archive JS vendor -->
-<script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
 <script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
 <script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 
