--- a/tratamiento-criolipolisis.html
+++ b/tratamiento-criolipolisis.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="estetica y belleza">
     <!-- Meta Tags -->
-    <meta name="description" content="Empresa especializada en el uso de tratamiento estéticos que hace uso de la última tecnología y métodos de belleza, como por ejemplo: la reducción de grasa adiposa con criolipolisis, eliminación de vello con laser IPL o soprano, bótox, himfu para el moldeado del cuerpo, tratamiento faciales rejuvenecedores y mucho más.">
+    <!-- <meta name="description" content="Empresa especializada en el uso de tratamiento estéticos que hace uso de la última tecnología y métodos de belleza, como por ejemplo: la reducción de grasa adiposa con criolipolisis, eliminación de vello con laser IPL o soprano, bótox, himfu para el moldeado del cuerpo, tratamiento faciales rejuvenecedores y mucho más.">-->
+    <meta name="description" content="Empresa especializada en el uso de los ultimos tratamientos estéticos y técnicas de belleza para tratar la grasa adiposa, flacidez, arrugas, vello y mucho más.">
     <meta name="keywords" content="Criolipolisis, depilaser, botox, himfu, lifting, dermapen, limpieza facial, exfoliación, plasma, mesolifting, velaslim, radiofrecuencia, velashape">
     <!-- Titulo de la Pagina -->
     <title>Mari Beauty Clinic</title>
@@ -35,7 +36,7 @@
 
     <!-- CSS vendor Bootstrap y otros -->
     <link href="/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/vendor/glightbox/css/glightbox.min.css">
 
     <!-- Archivo CSS Templai -->
     <link rel="stylesheet" href="assets/css/style.css">
@@ -81,7 +82,6 @@
                             <li class="dropdown"><a href="#"><span>Faciales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                                 <ul>
                                    <li><a href="tratamiento-dermapen.html">Dermapen</a></li>
-                                   <li><a href="#microneedling">Microneedling</a></li>
                                    <li><a href="tratamiento-mesolifting.html">Mesolifting</a></li>
                                    <li><a href="tratamiento-limpieza-facial.html">Limpieza Facial</a></li>
                                    <li><a href="tratamiento-botox.html">Botox</a></li>
@@ -286,7 +286,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 <!-- Archive JS vendor -->
-<script src="/assets/vendor/swiper/swiper-bundle.min.js"></script>
+<script src="/assets/vendor/glightbox/js/glightbox.min.js"></script>
+<script src="/assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>>
 
 <!-- Templay main archivo JS-->
 <script src="assets/js/main.js"></script>
