cambios en page 404

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item">(4) Sesiones HimFu</li>
-                  <li class="list-group-item">(2) Sesiones de RadioFrecuencia Combinada<</li>
+                  <li class="list-group-item">(2) Sesiones de RadioFrecuencia Combinada</li>
                   <li class="list-group-item">(2) Sesiones de Ondas de Choque</li>
                   <li class="list-group-item">(2) Meso Anticelulitis</li>
                 </ul>
