--- a/page_error404.html
+++ b/page_error404.html
@@ -94,13 +94,13 @@
 
     <section class="page-error">
         <div class="container no-found-centrado">
-                <div class="row col-lg-12  col-md-12 col-sm-12 d-flex justify-content-center align-items-center flex-column">
+                <div class="row col-lg-12 col-md-12 d-flex justify-content-center align-items-center flex-column">
                     <div class="no-found">
                             <!-- <h1>Oops!</h1> -->
                             <img src="/assets/img/opps/no-found.webp" alt="">
-                            <h3 class="texto">404 - PAGINA NO ENCONTRADA</h3>
+                            <h3 class="texto">404 - PÁGINA NO ENCONTRADA</h3>
                             <p>La página que está buscando podría estar eliminada o no estar disponible temporalmente</p>
-                            <button>IR AL INICIO</button>
+                            <button><a href="#">IR AL INICIO</a> </button>
                     </div>
                 </div>
         </div>
