cambios en la ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </h3>
             </div >
             <div class="col-lg-6 order-1 order-lg-2 hero-img"> 
-                <img src="/assets/img/imagen-mujer-beuaty-3.png" alt="estética belleza corporal" class="img-hero-variante">
+                <img src="assets/img/imagen-mujer-beuaty-3.png" alt="estética belleza corporal" class="img-hero-variante">
             </div>
 
         </div>
@@ -213,12 +213,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" class="rounded img-fluid" alt="imagenes criolipolisis">
+          <img src="assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" class="rounded img-fluid" alt="imagenes criolipolisis">
           <div class="portfolio-info">
             <h4>Criolipolisis</h4>
             <p>Tratamiento reductor de grasa adiposa</p>
             <div class="portfolio-links">
-              <a href="/assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-criolipolisis.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -227,12 +227,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-facial">
         <div class="portfolio-wrap">
-          <img src="/assets/img/botox/botox-labios.jpg" class="rounded img-fluid" alt="imagen Bótox">
+          <img src="assets/img/botox/botox-labios.jpg" class="rounded img-fluid" alt="imagen Bótox">
           <div class="portfolio-info">
             <h4>Bótox</h4>
             <p>Reducir arrugas y líneas de expresión </p>
             <div class="portfolio-links">
-              <a href="/assets/img/botox/botox-terapia.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/botox/botox-terapia.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-botox.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -241,12 +241,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/Depilaser/depilacion-lase-definitiva.jpg" class="rounded img-fluid" alt="imagen Depilaser">
+          <img src="assets/img/Depilaser/depilacion-lase-definitiva.jpg" class="rounded img-fluid" alt="imagen Depilaser">
           <div class="portfolio-info">
             <h4>Depilaser</h4>
             <p>Eliminar vello en distintas zonas</p>
             <div class="portfolio-links">
-              <a href="/assets/img/Depilaser/depilacion-lase-definitiva.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/Depilaser/depilacion-lase-definitiva.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-depilaser.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -255,12 +255,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-facial">
         <div class="portfolio-wrap">
-          <img src="/assets/img/dermapen/metodo-facial-dermapen.jpg" class="rounded img-fluid" alt="imagen Dermapen">
+          <img src="assets/img/dermapen/metodo-facial-dermapen.jpg" class="rounded img-fluid" alt="imagen Dermapen">
           <div class="portfolio-info">
             <h4>Dermapen</h4>
             <p>Mejorar aspecto y textura de la piel</p>
             <div class="portfolio-links">
-              <a href="/assets/img/dermapen/metodo-facial-dermapen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/dermapen/metodo-facial-dermapen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-dermapen.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -269,12 +269,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/Himfu/himfu.jpg" class="rounded img-fluid" alt="imagen Himfu">
+          <img src="assets/img/Himfu/himfu.jpg" class="rounded img-fluid" alt="imagen Himfu">
           <div class="portfolio-info">
             <h4>Himfu</h4>
             <p>Eliminar tejido graso subcutáneo</p>
             <div class="portfolio-links">
-              <a href="/assets/img/Himfu/himfu.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/Himfu/himfu.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-himfu.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -283,12 +283,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-gluteos">
         <div class="portfolio-wrap">
-          <img src="/assets/img/endopeel/aumento-gluteo.jpg" class="rounded img-fluid" alt="imagen Lifting">
+          <img src="assets/img/endopeel/aumento-gluteo.jpg" class="rounded img-fluid" alt="imagen Lifting">
           <div class="portfolio-info">
             <h4>Endopeel</h4>
             <p>Tratamiento para realzar el glúteo</p>
             <div class="portfolio-links">
-              <a href="/assets/img/endopeel/Aumento-de-gluteos-con-acido-hialuronico-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/endopeel/Aumento-de-gluteos-con-acido-hialuronico-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-endopeel.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -297,12 +297,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-facial">
         <div class="portfolio-wrap">
-          <img src="/assets/img/limpieza-facial/limpieza-facial.jpg" class="rounded img-fluid" alt="imagen Limpieza Facial">
+          <img src="assets/img/limpieza-facial/limpieza-facial.jpg" class="rounded img-fluid" alt="imagen Limpieza Facial">
           <div class="portfolio-info">
             <h4>Limpieza Facial</h4>
             <p>Limpieza y tratamiento rejuvenecedor </p>
             <div class="portfolio-links">
-              <a href="/assets/img/limpieza-facial/limpieza-facial.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/limpieza-facial/limpieza-facial.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-limpieza-facial.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -311,12 +311,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-facial">
         <div class="portfolio-wrap">
-          <img src="/assets/img/mesolifting/mesolifting-cuello.jpg" class="rounded img-fluid" alt="imagen Mesolifting">
+          <img src="assets/img/mesolifting/mesolifting-cuello.jpg" class="rounded img-fluid" alt="imagen Mesolifting">
           <div class="portfolio-info">
             <h4>Mesolifting</h4>
             <p>Rejuvenecimiento de la piel y atenuación de las arrugas</p>
             <div class="portfolio-links">
-              <a href="/assets/img/mesolifting/mesolifting-cuello.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/mesolifting/mesolifting-cuello.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-mesolifting.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -325,12 +325,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/mesoterpia/mesoterapia-abdomen.jpg" class="rounded img-fluid" alt="imagen Mesoterapia">
+          <img src="assets/img/mesoterpia/mesoterapia-abdomen.jpg" class="rounded img-fluid" alt="imagen Mesoterapia">
           <div class="portfolio-info">
             <h4>Mesoterapia</h4>
             <p>Reducir celulitis y tejido adiposo</p>
             <div class="portfolio-links">
-              <a href="/assets/img/mesoterpia/mesoterapia-abdomen-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/mesoterpia/mesoterapia-abdomen-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-mesoterapia.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -339,12 +339,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/velashape/Velashape-mari-beauty-clinic.jpg" class="rounded img-fluid" alt="Imagen Velashape">
+          <img src="assets/img/velashape/Velashape-mari-beauty-clinic.jpg" class="rounded img-fluid" alt="Imagen Velashape">
           <div class="portfolio-info">
             <h4>Velashape</h4>
             <p>Reducir el contorno corporal y la celulitis</p>
             <div class="portfolio-links">
-              <a href="/assets/img/velashape/Velashape-mari-beauty-clinic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/velashape/Velashape-mari-beauty-clinic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-velashape.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -353,12 +353,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/radiofrecuencia/radiofrecuencia-abdomen.jpg" class="rounded img-fluid" alt="imagen Radiofrecuencia Corporal">
+          <img src="assets/img/radiofrecuencia/radiofrecuencia-abdomen.jpg" class="rounded img-fluid" alt="imagen Radiofrecuencia Corporal">
           <div class="portfolio-info">
             <h4>Radiofrecuencia Corporal</h4>
             <p>Combatir la flacidez y la celulitis</p>
             <div class="portfolio-links">
-              <a href="/assets/img/radiofrecuencia/radiofrecuencia-abdomen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/radiofrecuencia/radiofrecuencia-abdomen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-radiofrecuencia.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -367,12 +367,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/mio-up/mio-up-gluteos.jpg" class="rounded img-fluid" alt="imagne Valaslim">
+          <img src="assets/img/mio-up/mio-up-gluteos.jpg" class="rounded img-fluid" alt="imagne Valaslim">
           <div class="portfolio-info">
             <h4>Mio-up</h4>
             <p>Reducir grasa adiposa y tonificar</p>
             <div class="portfolio-links">
-              <a href="/assets/img/mio-up/mio-up-gluteos.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="assets/img/mio-up/mio-up-gluteos.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="tratamiento-mio-up.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -401,7 +401,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/plan-reductorjpg.jpg" class="card-img-top" alt="Plan estético Reductor con Himfu-Ondas_Ondas_de_Choque">
+              <img src="assets/img/paquetes/plan-reductorjpg.jpg" class="card-img-top" alt="Plan estético Reductor con Himfu-Ondas_Ondas_de_Choque">
               <div class="card-body">
                 <h5 class="card-title">Plan Reductores</h5>
                 <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
@@ -416,7 +416,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/radio-frecuencia-corporal.jpg" class="card-img-top" alt="Plan estético Reductor Anticelulitis">
+              <img src="assets/img/paquetes/radio-frecuencia-corporal.jpg" class="card-img-top" alt="Plan estético Reductor Anticelulitis">
               <div class="card-body">
                 <h5 class="card-title">Plan Reductores Anticelulitis</h5>
                 <!-- <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p> -->
@@ -432,7 +432,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/toniificador.jpg" class="card-img-top" alt="Plan estético Tonificador">
+              <img src="assets/img/paquetes/toniificador.jpg" class="card-img-top" alt="Plan estético Tonificador">
               <div class="card-body">
                 <h5 class="card-title">Plan Tonificador</h5>
                 <ul class="list-group list-group-flush">
@@ -446,7 +446,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/facial-limpieza.jpg" class="card-img-top" alt="Plan estético Limpieza Facial">
+              <img src="assets/img/paquetes/facial-limpieza.jpg" class="card-img-top" alt="Plan estético Limpieza Facial">
               <div class="card-body">
                 <h5 class="card-title">Plan Limpieza Facial</h5>
                 <ul class="list-group list-group-flush">
@@ -463,7 +463,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/face-meso.jpg" class="card-img-top" alt="Plan estético Mesoterapia">
+              <img src="assets/img/paquetes/face-meso.jpg" class="card-img-top" alt="Plan estético Mesoterapia">
               <div class="card-body">
                 <h5 class="card-title">Plan Facial Mesoterapia</h5>
                 <ul class="list-group list-group-flush">
@@ -477,7 +477,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="/assets/img/paquetes/facial-plasma.jpg" class="card-img-top" alt="Plan estético Facial con Plasma">
+              <img src="assets/img/paquetes/facial-plasma.jpg" class="card-img-top" alt="Plan estético Facial con Plasma">
               <div class="card-body">
                 <h5 class="card-title">Plan Facial Plasma</h5>
                 <ul class="list-group list-group-flush">
@@ -509,7 +509,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
           <div class="member">
-            <img src="/assets/img/equipo/perfil-esteticista-1.jpg" alt="esteticista profesional">
+            <img src="assets/img/equipo/perfil-esteticista-1.jpg" alt="esteticista profesional">
             <h4>Erika Campos</h4>
             <span>Esteticista Profesional</span>
             <p>
@@ -525,7 +525,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
           <div class="member">
-            <img src="/assets/img/equipo/perfil-cosmetologa-2.jpg" alt="cosmetologa">
+            <img src="assets/img/equipo/perfil-cosmetologa-2.jpg" alt="cosmetologa">
             <h4>Jessica Lopez</h4>
             <span>Cosmetologa</span>
             <p>
@@ -541,7 +541,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
           <div class="member">
-            <img src="/assets/img/equipo/perfil-cosmiatra-3.jpg" alt="cosmiatra">
+            <img src="assets/img/equipo/perfil-cosmiatra-3.jpg" alt="cosmiatra">
             <h4>Jennifer Perez</h4>
             <span>Cosmiatra</span>
             <p>
